Worked on removing the patient