@@ -1,20 +1,14 @@
 package kg.attractor.java.controller;
 
 import com.sun.net.httpserver.HttpExchange;
-import freemarker.template.Configuration;
-import freemarker.template.Template;
-import freemarker.template.TemplateException;
+import freemarker.template.*;
 import kg.attractor.java.model.Patient;
+import kg.attractor.java.server.HttpStatusCode;
 import kg.attractor.java.server.RouteHandler;
-import kg.attractor.java.utils.Storage;
-import kg.attractor.java.server.ResponseCode;
 import kg.attractor.java.utils.Query;
+import kg.attractor.java.utils.Storage;
 
-import java.io.IOException;
-import java.io.OutputStreamWriter;
-import java.io.UnsupportedEncodingException;
-import java.io.Writer;
-import java.net.URI;
+import java.io.*;
 import java.net.URLDecoder;
 import java.nio.charset.StandardCharsets;
 import java.time.LocalDate;
@@ -22,9 +16,9 @@ import java.time.LocalTime;
 import java.time.format.DateTimeFormatter;
 import java.util.HashMap;
 import java.util.Map;
-import java.util.Optional;
 
 public class AddPatientHandler implements RouteHandler {
+
     private final Configuration freemarker;
 
     public AddPatientHandler(Configuration freemarker) {
@@ -38,7 +32,7 @@ public class AddPatientHandler implements RouteHandler {
         } else if ("POST".equals(ex.getRequestMethod())) {
             handlePost(ex);
         } else {
-            ex.sendResponseHeaders(405, -1);
+            ex.sendResponseHeaders(HttpStatusCode.METHOD_NOT_ALLOWED.getCode(), -1);
         }
     }
 
@@ -48,58 +42,63 @@ public class AddPatientHandler implements RouteHandler {
         String rawDay = Query.getParam(ex.getRequestURI().getQuery(), "day")
                 .orElseThrow(() -> new IllegalArgumentException("Day parameter is missing"));
 
-        int day = Integer.parseInt(rawDay);
-        LocalDate date = LocalDate.of(LocalDate.now().getYear(), LocalDate.now().getMonth(), day);
+        int day  = Integer.parseInt(rawDay);
+        LocalDate date = LocalDate.of(LocalDate.now().getYear(),
+                LocalDate.now().getMonth(), day);
 
-        model.put("day", day);
+        model.put("day",  day);
         model.put("date", date.toString());
 
         renderTemplate(ex, "addPatient.ftlh", model);
     }
 
     private void handlePost(HttpExchange ex) throws IOException {
-        String requestBody = new String(ex.getRequestBody().readAllBytes(), StandardCharsets.UTF_8);
-        Map<String, String> params = parseRequestBody(requestBody);
+        String body = new String(ex.getRequestBody().readAllBytes(), StandardCharsets.UTF_8);
+        Map<String, String> p = parseRequestBody(body);
 
         try {
-            int day = Integer.parseInt(params.get("day"));
-            LocalDate date = LocalDate.of(LocalDate.now().getYear(), LocalDate.now().getMonth(), day);
-            LocalTime time = LocalTime.parse(params.get("time"), DateTimeFormatter.ofPattern("HH:mm"));
-            String fullName = params.get("fullName");
-            String type = params.get("type");
-            String symptoms = params.get("symptoms");
+            int day       = Integer.parseInt(p.get("day"));
+            LocalDate date = LocalDate.of(LocalDate.now().getYear(),
+                    LocalDate.now().getMonth(), day);
+            LocalTime time = LocalTime.parse(p.get("time"), DateTimeFormatter.ofPattern("HH:mm"));
 
-            Patient newPatient = new Patient(time, fullName, type, symptoms);
-            Storage.addPatient(date, newPatient);
+            Patient patient = new Patient(
+                    time,
+                    p.get("fullName"),
+                    p.get("type"),
+                    p.get("symptoms")
+            );
+            Storage.addPatient(date, patient);
 
             ex.getResponseHeaders().set("Location", "/patients?day=" + day);
+            ex.sendResponseHeaders(HttpStatusCode.SEE_OTHER.getCode(), -1);
 
-            ex.sendResponseHeaders(ResponseCode.SEE_OTHER.getCode(), -1);
         } catch (Exception e) {
-            System.err.println("Error adding patient: " + e.getMessage());
-            ex.sendResponseHeaders(500, -1);
+            e.printStackTrace();
+            ex.sendResponseHeaders(HttpStatusCode.INTERNAL_SERVER_ERROR.getCode(), -1);
         }
     }
 
-    private void renderTemplate(HttpExchange ex, String templateName, Map<String, Object> model) throws IOException {
+    private void renderTemplate(HttpExchange ex, String tplName, Map<String, Object> model) throws IOException {
         ex.getResponseHeaders().set("Content-Type", "text/html; charset=UTF-8");
-        ex.sendResponseHeaders(200, 0);
+        ex.sendResponseHeaders(HttpStatusCode.OK.getCode(), 0);
         try (Writer w = new OutputStreamWriter(ex.getResponseBody(), StandardCharsets.UTF_8)) {
-            Template tpl = freemarker.getTemplate(templateName);
+            Template tpl = freemarker.getTemplate(tplName);
             tpl.process(model, w);
         } catch (TemplateException e) {
             throw new IOException(e);
         }
     }
 
-    private Map<String, String> parseRequestBody(String requestBody) throws UnsupportedEncodingException {
+    private Map<String, String> parseRequestBody(String body) throws UnsupportedEncodingException {
         Map<String, String> params = new HashMap<>();
-        String[] pairs = requestBody.split("&");
-        for (String pair : pairs) {
-            int idx = pair.indexOf("=");
-            String key = URLDecoder.decode(idx > 0 ? pair.substring(0, idx) : pair, StandardCharsets.UTF_8.name());
-            String value = idx > 0 && pair.length() > idx + 1 ? URLDecoder.decode(pair.substring(idx + 1), StandardCharsets.UTF_8.name()) : "";
-            params.put(key, value);
+        for (String pair : body.split("&")) {
+            int idx = pair.indexOf('=');
+            String key = URLDecoder.decode(idx > 0 ? pair.substring(0, idx) : pair, StandardCharsets.UTF_8);
+            String val = idx > 0 && pair.length() > idx + 1
+                    ? URLDecoder.decode(pair.substring(idx + 1), StandardCharsets.UTF_8)
+                    : "";
+            params.put(key, val);
         }
         return params;
     }
